--- a/Frontend/TutorVirtual/Assets/packages.config
+++ b/Frontend/TutorVirtual/Assets/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.2" />
   <package id="Microsoft.Extensions.Options" version="10.0.2" />
   <package id="Microsoft.Extensions.Primitives" version="10.0.2" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" manuallyInstalled="true" />
   <package id="System.ClientModel" version="1.9.0" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
   <package id="System.Diagnostics.DiagnosticSource" version="10.0.2" />
