--- a/Frontend/TutorVirtual/Assembly-CSharp.csproj
+++ b/Frontend/TutorVirtual/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\DeepgramStreaming.cs" />
     <Compile Include="Assets\Scripts\FastApiConnector.cs" />
+    <Compile Include="Assets\Scripts\shadow.cs" />
     <Compile Include="Assets\Scripts\LoginUIController.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\GeminiChatHandler.cs" />
