--- a/Frontend/TutorVirtual/Packages/manifest.json
+++ b/Frontend/TutorVirtual/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.18.0",
     "com.unity.multiplayer.center": "1.0.1",
     "com.unity.nuget.newtonsoft-json": "3.2.2",
+    "com.unity.postprocessing": "3.5.1",
     "com.unity.services.cloud-build": "2.0.7",
     "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.10",
