--- a/Frontend/TutorVirtual/Assembly-CSharp.csproj
+++ b/Frontend/TutorVirtual/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.3.6f1\Editor\Data\Tools\BuildPipeline\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AnimationsReference.cs" />
     <Compile Include="Assets\Scripts\BackgroundMode.cs" />
     <Compile Include="Assets\Scripts\DebugManager.cs" />
     <Compile Include="Assets\Scripts\TutorController.cs" />
